--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.0"
+    "express-session": "^1.17.0",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
